[project]
name = "claim-cloud-id"
version = "0.1.0"
description = " A Python utility for interacting with the Meraki Dashboard API to automate device inventory tasks — bulk add, release and reporting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "meraki>=2.2.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
claim-cloud-id = "claim_cloud_id.main:main"
