[project]
name = "claim-cloud-id"
version = "1.1.1"
description = "A Python utility for interacting with the Meraki Dashboard API to automate device inventory tasks — bulk add, release and reporting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "meraki>=2.2.0,<3",
    "python-dotenv>=1.1.0,<2",
]

[project.scripts]
claim-cloud-id = "claim_cloud_id.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
